# logsift

./: .dockerignore  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .shellcheckrc  CLAUDE.md  LICENSE  NEW_CLI_STRUCTURE.md  PLANNING.md  README.md  mkdocs.yml  pyproject.toml  run-and-summarize.sh  summarize-log.sh
.github/: copilot-instructions.md
.github/workflows/: publish.yml.disabled  validate.yml
docs/: cli-reference.md  index.md  installation.md  quickstart.md
docs/api/: config-format.md  json-schema.md  pattern-format.md
docs/architecture/: data-flow.md  design-principles.md
docs/concepts/: agentic-integration.md  output-modes.md  pattern-matching.md
docs/development/: patterns.md  setup.md  testing.md
docs/guides/: custom-patterns.md  monitoring.md  structured-logging.md
src/logsift/: __init__.py  __main__.py  cli.py  cli_formatter.py
src/logsift/cache/: __init__.py  manager.py  metadata.py  rotation.py
src/logsift/commands/: __init__.py  analyze.py  format_commands.py  logs.py  monitor.py  patterns.py  watch.py
src/logsift/config/: __init__.py  defaults.py  loader.py  validator.py
src/logsift/core/: __init__.py  analyzer.py  context.py  detectors.py  extractors.py  matchers.py  parser.py
src/logsift/mcp/: __init__.py  server.py  tools.py
src/logsift/monitor/: __init__.py  process.py  remote.py  watcher.py
src/logsift/output/: __init__.py  json_formatter.py  markdown_formatter.py  plain_formatter.py  streaming.py  toon_formatter.py
src/logsift/patterns/: __init__.py  loader.py  matcher.py  validator.py
src/logsift/patterns/defaults/: apt.toml  brew.toml  cargo.toml  common.toml  docker.toml  emoji.toml  http.toml  make.toml  npm.toml  pre-commit.toml  pytest.toml  shell.toml  unicode.toml
src/logsift/utils/: colors.py  display.py  fzf.py  notifications.py  timestamps.py  tty.py
tests/: __init__.py  conftest.py
tests/fixtures/pre-commit-violations/: bad.json  bad.toml  bad.yaml  codespell_typos.txt  mypy_types.py  refurb_list_comp.py  refurb_pathlib.py  ruff_errors.py  shellcheck_command_not_found.sh  shellcheck_unquoted.sh  shellcheck_unused.sh
tests/integration/: __init__.py  test_cli.py  test_logs_cli.py  test_workflows.py
tests/unit/: __init__.py  test_analyze_command.py  test_analyzer.py  test_cache_manager.py  test_cache_rotation.py  test_config.py  test_config_loader.py  test_context.py  test_error_code_extraction.py  test_expanded_patterns.py  test_extractors.py  test_formatters.py  test_fzf.py  test_generate_log_name.py  test_hook_detection.py  test_json_formatter.py  test_logs_command.py  test_markdown_formatter.py  test_matcher.py  test_monitor_command.py  test_multiline_context.py  test_notifications.py  test_parser.py  test_pattern_libraries.py  test_pattern_loader.py  test_pattern_validator.py  test_patterns.py  test_precommit_patterns.py  test_process_monitor.py  test_streaming.py  test_tty.py  test_utils.py  test_watcher.py
tests/unit/output/: test_toon_formatter.py
