[project]
name = "logsift"
version = "0.1.0"
description = "Intelligent log analysis and command monitoring tool designed for LLM-driven automated workflows"
authors = [{ name = "Chris Birch", email = "datapointchris@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # CLI and UI
    "typer[all]>=0.15.0",
    # TOML handling
    "tomli-w>=1.0.0",
    # Process handling
    "sh>=2.0.0",
    # Date parsing
    "python-dateutil>=2.8.0",
]
keywords = ["log-analysis", "monitoring", "llm", "automation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/datapointchris/logsift"
Documentation = "https://github.com/datapointchris/logsift"
Repository = "https://github.com/datapointchris/logsift"
Issues = "https://github.com/datapointchris/logsift/issues"

[project.scripts]
logsift = "logsift.cli:app"

[dependency-groups]
dev = [
    # Development tools and linting
    "bandit>=1.7.8",
    "coverage>=7.5.0",
    "deptry>=0.16.1",
    "docformatter>=1.7.5",
    "interrogate>=1.7.0",
    "mypy>=1.10.0",
    "ruff>=0.7.0",
    # Documentation
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.5.20",
    "mkdocstrings-python>=1.16.10",
    "mkdocstrings>=0.29.1",
    "pymdown-extensions>=10.8.1",
    # Type stubs for development
    "types-python-dateutil>=2.8.0",
    # Additional dev dependencies
    "pre-commit>=4.3.0",
]
test = [
    # Testing framework and tools
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "pytest-md>=0.2.0",
    "pytest-mock>=3.12",
    # Test data generation and mocking
    "Faker>=25.0.1",
    "freezegun>=1.5.1",
    "pytest>=8.4.1",
]


# ---------- Tool Configurations ---------- #


[tool.bandit]
exclude_dirs = [".git", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "tests"]
skips = ["B113", "B311"]


[tool.codespell]
skip = '*.css.map'
ignore-words-list = "astroid,aNULL,ANULL,anull"
check-filenames = true


[tool.coverage.run]
parallel = true
branch = true
source = ["logsift"]
omit = []

[tool.coverage.paths]
source = ["src/logsift"]

[tool.coverage.report]
# Temporarily lowered for Phase 1 scaffolding (stubs raise NotImplementedError)
# Will increase to 80 as we implement actual functionality
fail_under = 60
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "@abstractmethod"]


[tool.docformatter]
recursive = true
in-place = true
exclude = [".git", ".mypy_cache", ".venv", "build", "dist"]
wrap-summaries = 140
wrap-descriptions = 140
close-quotes-on-newline = true
blank = false


[tool.mypy]
pretty = true
ignore_missing_imports = true
check_untyped_defs = false
warn_return_any = false


[tool.pyright]
analyzeUnannotatedFunctions = true
reportAny = false
reportImplicitOverride = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPossiblyUnboundVariable = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false


[tool.pytest.ini_options]
addopts = "-vv"
minversion = "8.0"
testpaths = ["tests"]


[tool.refurb]
ignore = [
    "FURB184",  # Allow separate assignment and assertion in tests for readability
]


[tool.ruff]
line-length = 140
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    ".vscode",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["SIM108"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


# ---------- Build System ---------- #


[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "logsift"
module-root = "src"
